Practice Project of ReactJS

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* .heading {
+    color: blueviolet;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: bold;
+    text-shadow: 0px 2px 4px red;
+    margin: 50px;
+    font-family: 'Josefin Sans', sans-serif;
+} */
+
+.img_div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img_div img {
+    width: 650px;
+    height: 400px;
+    padding: 20px;
+    margin: 6px;
+    
 }
